Refactor dependency injection: switch to constructor-based injection for services and validators, update DTO imports, and adjust entity annotations for improved clarity and maintainability